--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div id="frases"></div>
         
         <footer>
-            Feito com ❤️ por <a href="https://github.com/mateusmoraiss" target="_blank" rel="noopener noreferrer">Mateus</a>
+            Feito com ❤️ por <a href="https://www.instagram.com/mateusmoraiskrr/" target="_blank" rel="noopener noreferrer">Mateus</a>
         </footer>
         
     </div>
@@ -62,27 +62,27 @@
 
         const frases = [
             "Oi",
-            "Tudo bem?",
-            "Espero que sim! ",
-            "Deixa eu te contar uma coisa...",
-            "Podem não ter visto o seu esforço hoje,",
-            "mas você tem um pai lá no céu...",
-            "Ele viu tudo que você fez...",
-            "sabe das suas lutas,",
-            "das corridas de 5,67 R$... (HUAHUAHUA),",
-            "das corridas com 4 passageiros e 1 cachorro,",
-            "das corridas com as caloteiras do 'deixa pra pagar na próxima'...",
-            "das corridas pra mercado com 80 sacolas,",      
-            "Ele vê tudo isso, pode ter certeza!",
-            "Lá na frente VAI VALER A PENA",
-            "Você foi incrível hoje, obrigado por não desistir.",
-            "Bom descanso :) VRUMMMM"
+            "Você deu show hoje, sabia?",
+            "Não importa se ninguém viu o seu esforço,",
+            "o que importa é que você sabe o que fez...",
+            "e o que vale é a sua consciência...",
+            "Você enfrentou as corridas mais loucas...",
+            "Eu sei que você recusou aquela corrida pagando R$ 5,67 com 4 pessoas, um cachorro, 2 malas e uma geladeira...(HUAHUAHUA)",
+            "mas tá tudo bem!",
+            "você não perdeu a paciência...",
+            "nem a sua alegria...",
+            "Você é um profissional de respeito, e merece todo sucesso do mundo!",
+            "Calculou seu Lucro Bruto?",
+            "Se quiser me mandar metade clica no meu nome ali em baixo. (brincadeira) kkkkkk",
+            "'Não sejamos envergonhados e nem triufem sobre nós os nossos inimigos, mas livrai-nos do mal......",
+            "AMÉM!'",
+            "VRUMMMM ......🚗💨"
         ];
 
         const options = {
             strings: frases,
-            typeSpeed: 100, // Velocidade da digitação (em milissegundos)
-            backSpeed: 20, // Velocidade de apagar (em milissegundos)
+            typeSpeed: 87, // Velocidade da digitação (em milissegundos)
+            backSpeed: 10, // Velocidade de apagar (em milissegundos)
             backDelay: 1800, // Pausa após apagar (em milissegundos)
             startDelay: 4500, // Pausa antes de começar a digitar (em milissegundos)
             loop: false, // Repetir o efeito
