--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             "Você é um profissional de respeito, e merece todo sucesso do mundo!",
             "Calculou seu Lucro Bruto?",
             "Se quiser me mandar metade clica no meu nome ali em baixo. (brincadeira) kkkkkk",
-            "'Não sejamos envergonhados e nem triufem sobre nós os nossos inimigos, mas livrai-nos do mal......",
+            "'Não sejamos envergonhados e nem triunfem sobre nós os nossos inimigos, mas livrai-nos do mal......",
             "AMÉM!'",
             "VRUMMMM ......🚗💨"
         ];
