--- a/index.html
+++ b/index.html
@@ -61,21 +61,19 @@
 
 
         const frases = [
+            "🚘⛽..............zzZzzzZzZzZzz",    
             "Oi",
-            "Você deu show hoje, sabia?",
+            "Mandou ver hoje, hein?",
             "Não importa se ninguém viu o seu esforço,",
             "o que importa é que você sabe o que fez...",
-            "e o que vale é a sua consciência...",
             "Você enfrentou as corridas mais loucas...",
             "Eu sei que você recusou aquela corrida pagando R$ 5,67 com 4 pessoas, um cachorro, 2 malas e uma geladeira...(HUAHUAHUA)",
             "mas tá tudo bem!",
             "você não perdeu a paciência...",
             "nem a sua alegria...",
-            "Você é um profissional de respeito, e merece todo sucesso do mundo!",
             "Calculou seu Lucro Bruto?",
             "Se quiser me mandar metade clica no meu nome ali em baixo. (brincadeira) kkkkkk",
-            "'Não sejamos envergonhados e nem triufem sobre nós os nossos inimigos, mas livrai-nos do mal......",
-            "AMÉM!'",
+            "FICA COM DEUS",
             "VRUMMMM ......🚗💨"
         ];
 
