--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         <div class="form-group">
             <label for="consumo">Consumo de Combustível:</label>
-            <p style="font-size: 13px; text-align: center; margin-top: -5px;">(Litros por Km)</p>
+            <p style="font-size: 13px; text-align: center; margin-top: -5px;">(Litros por Km do carro)</p>
             <input type="number" id="consumo" step="0.01" required>
         </div>
         
