--- a/index.html
+++ b/index.html
@@ -61,20 +61,30 @@
 
 
         const frases = [
-            "🚘⛽..............zzZzzzZzZzZzz",    
-            "Oi",
-            "Mandou ver hoje, hein?",
-            "Não importa se ninguém viu o seu esforço,",
-            "o que importa é que você sabe o que fez...",
-            "Você enfrentou as corridas mais loucas...",
-            "Eu sei que você recusou aquela corrida pagando R$ 5,67 com 4 pessoas, um cachorro, 2 malas e uma geladeira...(HUAHUAHUA)",
-            "mas tá tudo bem!",
-            "você não perdeu a paciência...",
-            "nem a sua alegria...",
-            "Calculou seu Lucro Bruto?",
-            "Se quiser me mandar metade clica no meu nome ali em baixo. (brincadeira) kkkkkk",
-            "FICA COM DEUS",
-            "VRUMMMM ......🚗💨"
+            "🚘⛽.......",
+            "🚘⛽.",
+            "🚘⛽..",
+            "🚘⛽...",
+            "🚘⛽....",
+            "🚘⛽.....",
+            "🚘⛽......",
+            "🚘⛽.......",
+            "🚘⛽.......",
+            "🚘⛽.",
+            "🚘⛽..",
+            "🚘⛽...",
+            "🚘⛽....",
+            "🚘⛽.....",
+            "🚘⛽......",
+            "🚘⛽.......",
+            "🚘⛽.......",
+            "🚘⛽.",
+            "🚘⛽..",
+            "🚘⛽...",
+            "🚘⛽....",
+            "🚘⛽.....",
+            "🚘⛽......",
+            "🚘⛽......."
         ];
 
         const options = {
@@ -82,8 +92,8 @@
             typeSpeed: 87, // Velocidade da digitação (em milissegundos)
             backSpeed: 10, // Velocidade de apagar (em milissegundos)
             backDelay: 1800, // Pausa após apagar (em milissegundos)
-            startDelay: 4500, // Pausa antes de começar a digitar (em milissegundos)
-            loop: false, // Repetir o efeito
+            startDelay: 1, // Pausa antes de começar a digitar (em milissegundos)
+            loop: true, // Repetir o efeito
             showCursor: false // Ocultar cursor de digitação
         };
 
